--- a/app/assets/stylesheets/prefecture/prefecture.css
+++ b/app/assets/stylesheets/prefecture/prefecture.css
@@ -2,9 +2,13 @@
   position: fixed;
   padding-top: 60px;
   padding-left: 100px;
-
 }
 
+.contribution {
+  position: fixed;
+  top: 60px;
+  left: 50px;
+}
 
 .container {
   max-width: 800px;
