--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,4 @@
-<%= form_with(model: @travel, local: true) do |f| %>
-    
-  <h3>編集する</h3>
+<%= form_with(model: @article, local: true) do |f| %>
   <div class="img-upload">
     <div class="weight-bold-text">
       商品画像
@@ -12,7 +10,7 @@
       </p>
       <%= f.file_field :image, id:"item-image" %>
     </div>
-    <%= image_tag(@travel.image) if @travel.image.attached? %>
+    <%= image_tag(@article.image) if @article.image.attached? %>
   </div>
 
   <div class="field">
