--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,7 +42,10 @@
           </div>
         </div>
         <div class='actions'>
-          <%= f.submit "Create Account", class: 'btn'%>
+          <%= f.submit "Create Account", class: 'btn btn-primary' %>
+        </div>
+        <div class="actions">
+          <%= link_to "ゲストでログインする", users_guest_sign_in_path, method: :post, class: "btn btn-guest" %>
         </div>
       </div>
     <% end %>
