--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <script type="text/javascript" src="https://unpkg.com/japan-map-js@1.0.1/dist/jpmap.min.js"></script>
-    <script type="text/javascript" src="dist/jpmap.min.js"></script>
+    <script type="text/javascript" src="prefectures/jpmap.min.js"></script>
   </head>
 
   <body>
