--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -1,11 +1,10 @@
 .main-articles {
-  padding-bottom: 70px; 
+  padding-bottom: 100px; 
   box-sizing: border-box; 
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
- 
+  height: 120vh;
 }
 
 
@@ -37,18 +36,31 @@
 .wide-text-area {
   width: 300px;
   height: 100px;
-  /* 他のスタイルを追加できます */
 }
-
-
-.back-btn {
-  text-decoration: none;
-  background-color: #ccc;
-}
-
 
 .check .field {
-  margin-right: 20px; /* 適切なスペースを設定してください */
+  margin-right: 20px;
+}
+
+.new-article-btn {
+  display: block;
+  margin-top: 20px;
+  padding: 10px 15px;
+  background-color: #4285f4;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.back-btn {
+  display: block;
+  margin-top: 20px;
+  padding: 10px 15px;
+  background-color: #C0C0C0;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 5px;
 }
 
 
