--- a/app/assets/stylesheets/prefecture/prefecture.css
+++ b/app/assets/stylesheets/prefecture/prefecture.css
@@ -1,24 +1,37 @@
+ 
  /* index.html.erb */
-.map-main {
-  position: fixed;
-  top: 10px;
-  position: relative;
+ .map-main {
+  position: absolute;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  height: calc(100% - 200px);
+  flex-grow: 1;
+  height: 100vh;
 }
 
 .map-sub {
-  margin-left: 20px;
-
+  margin-left: 40px;
 }
+
+.map {
+  flex-grow: 2;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  
+  }
+  
+
+@media (min-width: 768px) {
+  .map {
+    width: 30%;
+    max-width: none; 
+  }
+}
+
 
 .map-title {
   font-size: 5vh;
-  border-bottom: solid 3px black;
-  
+  border-bottom: solid 3px black; 
 }
 
 .map-explain {
@@ -58,7 +71,7 @@
 }
 
 .cta_btn03-copy {
-  font-size:90%;
+  font-size: 10px;
   font-weight: bold;
   color: initial;
   position: absolute;
@@ -84,31 +97,6 @@
   margin-top: calc(2em + 3px);
   border-bottom: 2px solid #4285f4;
 }
-
-
-
-.map-top {
-  flex-grow: 1;
-  height: calc(100vh - 170px);
-}
-
-.map {
-  padding-top: 70px;
-  right: 50px;
-  width: 100%;
-  height: 100%;
-  /* 最大幅を指定 */
-  max-height: 100vh;
-  max-width: 100vw;
-}
-
-@media (min-width: 768px) {
-  .map {
-    width: 30%;
-    max-width: none; 
-  }
-}
-
 
 
 /* show.html.erb */
@@ -297,23 +285,3 @@
   font-weight: bold;
 }
 
-.new-article-btn {
-  display: block;
-  margin-top: 20px;
-  padding: 10px 15px;
-  background-color: #4285f4;
-  color: #fff;
-  text-align: center;
-  border-radius: 5px;
-}
-
-.back-btn {
-  display: block;
-  margin-top: 20px;
-  padding: 10px 15px;
-  background-color: #C0C0C0;
-  color: #fff;
-  text-decoration: none;
-  text-align: center;
-  border-radius: 5px;
-}
