--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,13 +3,22 @@
     <h1 class="grid-6"><a href="/">旅行日記</a></h1>
     <% if user_signed_in? %>
       <div class="user_nav grid-6">
-        <%= link_to "#{current_user.nickname}さん", edit_user_path(current_user), class: "post" %>
-        <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>  
+        <span><%= current_user.nickname %>さん
+          <ul class="user__info">
+            <li>
+              <%= link_to "マイページ", edit_user_path(current_user) %>
+            </li>
+            <li>
+              <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
+            </li>
+          </ul>
+        </span>
       </div>
     <% else %>
       <div class="grid-6">
         <%= link_to "ログイン", new_user_session_path, class: "post" %>
         <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+        <%= link_to "ゲストでログインする", users_guest_sign_in_path, method: :post, class: "btn btn-guest" %>
       </div>
     <% end %>
   </div>
