--- a/app/views/prefectures/show.html.erb
+++ b/app/views/prefectures/show.html.erb
@@ -58,7 +58,7 @@
                 <% if user_signed_in? && current_user.id == article.user_id %>
                   <%= link_to "編集", edit_article_path(article.id), method: :get, class: "article-edit-btn" %>
                   <p class="or-text">or</p>
-                  <%= link_to "削除", article_path(article.id), data:{ turbo_method: :delete }, class:"article-destroy-btn" %>
+                  <%= button_to "削除", article_path(article.id), method: :delete, class:"article-destroy-btn" %>
                 <% end %>
               </div>
             </li>
