--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,8 @@
 <%= render "shared/header" %>
 
+<% if current_user.email == 'guest@example.com'%>
+  <p class="guest-user">ゲストユーザーはユーザー情報の編集ができません。</p>
+<% else %>
 <div class='account-page' id='account-page'>
   <div class='account-page__inner clearfix'>
     <div class='account-page__inner--left account-page__header'>
@@ -96,5 +99,6 @@
       <p>No travel articles available.</p>
     <% end %>
   </div>
+<% end %>
 
 <%= render "shared/footer" %>
