--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
       <h2>Edit Account</h2>
       <h5>アカウントの編集</h5>
       <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn'%>
-      <%= link_to "トップに戻る", :back, class: 'btn'%>
+      <%= link_to "トップに戻る", root_path, class: 'btn'%>
     </div>
     <div class='account-page__inner--right user-form'>
       <%= form_with model: current_user, local: true do |f|%>
@@ -44,6 +44,9 @@
         <% @articles.each do |article| %>
           <li class='list'>
             <div class="article-top-title">
+              <div class="prefecture-name-article">
+                <%= article.prefecture.name if article.prefecture %>
+              </div>
               <div class="article-title">
                 <%= article.title %>
               </div>
@@ -74,6 +77,21 @@
                   <strong class="strong">パートナー:</strong>
                   <div class="article-container">
                     <%= article.partner.name %>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="article-sub">
+                <div class="field">
+                  <strong class="strong">料金:</strong>
+                  <div class="article-container">
+                    <%= article.price %>
+                  </div>
+                </div>
+                <div class="field">
+                  <strong class="strong">旅行サイト:</strong>
+                  <div class="article-container">
+                    <%= article.travel_site.name if article.travel_site %>
                   </div>
                 </div>
               </div>
