--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,6 +24,10 @@
             <%= f.email_field :email%>
           </div>
         </div>
+
+      <%if @sns_id.present? %>
+        <%= hidden_field_tag :sns_auth, true %>
+      <% else %>
         <div class='field'>
           <div class='field-label'>
             <%= f.label :password%>
@@ -41,11 +45,9 @@
             <%= f.password_field :password_confirmation, autocomplete: "off"%>
           </div>
         </div>
+      <% end %>
         <div class='actions'>
           <%= f.submit "Create Account", class: 'btn btn-primary' %>
-        </div>
-        <div class="actions">
-          
         </div>
       </div>
     <% end %>
