--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
             <i>(英数字6文字以上)</i>
           </div>
           <div class='field-input'>
-            <%= f.password_field :password, autocomplete: "off"%>
+            <%= f.password_field :password, autocomplete: "new-password" %>
           </div>
         </div>
         <div class='field'>
@@ -42,7 +42,7 @@
             <%= f.label :password_confirmation%>
           </div>
           <div class='field-input'>
-            <%= f.password_field :password_confirmation, autocomplete: "off"%>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
           </div>
         </div>
       <% end %>
