--- a/app/assets/stylesheets/user/user.css
+++ b/app/assets/stylesheets/user/user.css
@@ -127,3 +127,41 @@
   font-size: 40px;
   margin-top: 80px;
 }
+
+.main-omniauth-authorize {
+  text-align: center;
+  margin-top: 200px;
+  
+}
+
+.sub-omniauth-authorize {
+  margin-bottom: 30px;
+}
+
+.mail-omniauth {
+  text-decoration: none;
+  border: 1px solid #00BFFF;
+  color: #fff;
+  background-color: #00BFFF;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.btn-btn-guest {
+  text-decoration: none;
+  border: 1px solid #228B22;
+  padding: 10px;
+  color: #fff;
+  background-color: #228B22;
+  font-size: 20px;
+}
+
+.google-omniauth {
+  text-decoration: none;
+  border: 1px solid #228B22;
+  padding: 10px;
+  color: #fff;
+  background-color: #228B22;
+  font-size: 20px;
+
+}
